--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "nao sei add descricao dsclp",
   "main": "index.js",
   "scripts": {
+    "start": "node ./bin/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.7.0"
   }
